
    Also base for the `xhtml11` writer.

* docutils/writers/html4css1/__init__.py

  - Add "docutils" to class values for "container" object to address [ 267 ].
  - Apply patch [ 119 ] by Anatoly Techtonik: use absolute paths for
    ``default_stylesheet_path`` and ``default_template_path``.
  - Fix [ 266 ] creating labels/class values in description list items.

* docutils/writers/latex2e/__init__.py

  - Fix [ 262 ] Use ``\linewidth`` instead of ``\textwidth`` for figures,
    admonitions and docinfo.

  - Use absolute path for ``default_template_path``.

  - Removed deprecated options ``--use-latex-footnotes`` and
    ``--figure-footnotes``.

  - Cleaner LaTeX code for enumerations and literal blocks.

  - Use "hyperref" package together with "bookmark" (improved hyperlinking
    by the same author).

* docutils/writers/odf_odt/__init__.py

  - remove decode.encode of filename stored in zip.

* docutils/writers/xetex/__init__.py

  - LuaLaTex compatibility: do not load "xunicode".

* docutils/writers/xhtml11/

  - New HTML writer generating `XHTML 1.1`_ styled with CSS2.1
    Moved to the docutils core from sandbox/html4strict.


* tools/

  - New front-ends ``rst2xhtml.py`` and ``rst2html5.py`` for the
    corresponding writers.

.. _polyglot markup: http://www.w3.org/TR/html-polyglot/
.. _HTML 5: http://www.w3.org/TR/html5/
.. _XHTML 1.0: http://www.w3.org/TR/xhtml1/
.. _XHTML 1.1: http://www.w3.org/TR/xhtml11/


Release 0.12 (2014-07-06)
=========================

* docs/ref/rst/directives.txt

  - Update "math" and "csv-table" descriptions.

* docutils/parsers/rst/directives/images.py

  - Fix [ 258 ] figwidth="image" generates unitless width value.

* docutils/parsers/rst/states.py

  - Improve error report when a non-ASCII character is specified as
    delimiter, quote or escape character under Python 2.
    Fixes [ 249 ] and [ 250 ].

* docutils/writers/html4css1/__init__.py

  - Don't add newline after inline math.